Oppdatert tekster i kalkulatorer for M-tek og M-tett

--- a/Kalkulator M-tek/module.html
+++ b/Kalkulator M-tek/module.html
@@ -12,7 +12,7 @@
                         <line x1="12" y1="16" x2="12" y2="12"></line>
                         <line x1="12" y1="8" x2="12.01" y2="8"></line>
                     </svg>
-                    Analyse av ditt rom
+                    Sjekk pris og hvor mye du kan spare på å reparere uten å rive gulvet.
                 </h3>
                 <p class="panel-sub">Konfigurer gulvareal for å starte den tekniske beregningen.</p>
             </div>
