--- a/Kalkulator M-tett/index.html
+++ b/Kalkulator M-tett/index.html
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="input-module">
-                    <span class="label-text">Hva er skadet?</span>
+                    <span class="label-text">hvor er skaden</span>
                     <div id="damageGrid" class="damage-grid">
                         <!-- Buttons injected by JS -->
                     </div>
@@ -76,7 +76,7 @@
 
                 <div id="step1Error" class="hidden"
                     style="color: #dc2626; font-size: 0.85rem; margin-top: 1rem; text-align: center;">
-                    Vennligst velg hva som er skadet før du går videre.
+                    Vennligst velg hvor skaden er før du går videre.
                 </div>
             </div>
 
