--- a/Kalkulator M-tek/index.html
+++ b/Kalkulator M-tek/index.html
@@ -37,7 +37,7 @@
                             <line x1="12" y1="16" x2="12" y2="12"></line>
                             <line x1="12" y1="8" x2="12.01" y2="8"></line>
                         </svg>
-                        Analyse av ditt rom
+                        Sjekk pris og hvor mye du kan spare på å reparere uten å rive gulvet.
                     </h3>
                     <p class="panel-sub">Konfigurer gulvareal for å starte den tekniske beregningen.</p>
                 </div>
@@ -172,7 +172,7 @@
 
                 <div style="text-align: center; margin-top: 4rem;">
                     <a href="https://m-tek.no/kontakt" class="btn-mtek" style="max-width: 400px; margin: 0 auto;">
-                        Bestill fysisk befaring
+                        motta et tilbud
                     </a>
                 </div>
             </div>
