Oppdaterte tekster i M-tek kalkulator for å fokusere på prisestimat og besparelse

--- a/Kalkulator M-tek/index.html
+++ b/Kalkulator M-tek/index.html
@@ -19,9 +19,9 @@
             <div style="margin-bottom: 2rem;">
                 <img src="m-tek-logo-darker.svg" alt="M-Tek Logo" style="height: 50px;">
             </div>
-            <h1 class="main-title">Varmen tilbake på dagen <br>– uten å knuse en eneste flis</h1>
-            <p class="subtitle">Feilsøking med millimeterpresisjon. Vi finner den nøyaktige feilen slik at du slipper å
-                rive hele gulvet.</p>
+            <h1 class="main-title">Beregne pris og besparelse på <br>reparasjon av dine varmekabler</h1>
+            <p class="subtitle">Få et umiddelbart prisestimat på punktutbedring. Vår kalkulator analyserer kostnadene
+                ved å reparere fremfor å bytte hele gulvet.</p>
         </header>
 
         <!-- Main Dashboard Card -->
@@ -110,8 +110,9 @@
                         </svg>
                     </div>
                     <div class="stat-content">
-                        <h5>Raskt levert</h5>
-                        <p>Arbeidet utføres normalt på én arbeidsdag. Varmen er tilbake umiddelbart.</p>
+                        <h5>Rask utbedring</h5>
+                        <p>Arbeidet utføres normalt på én arbeidsdag. Effektiv prosess med minimal forstyrrelse for
+                            boligen.</p>
                     </div>
                 </div>
             </div>
@@ -172,7 +173,7 @@
 
                 <div style="text-align: center; margin-top: 4rem;">
                     <a href="https://m-tek.no/kontakt" class="btn-mtek" style="max-width: 400px; margin: 0 auto;">
-                        motta et tilbud
+                        Motta et tilbud
                     </a>
                 </div>
             </div>
