--- a/Kalkulator M-tek/module.html
+++ b/Kalkulator M-tek/module.html
@@ -72,8 +72,8 @@
                     </svg>
                 </div>
                 <div class="stat-content">
-                    <h5>Varmen tilbake</h5>
-                    <p>Arbeidet utføres normalt på én arbeidsdag – uten riving.</p>
+                    <h5>Rask utbedring</h5>
+                    <p>Arbeidet utføres normalt på én arbeidsdag. Effektiv prosess med minimal forstyrrelse.</p>
                 </div>
             </div>
         </div>
