--- a/Kalkulator M-tek/index.html
+++ b/Kalkulator M-tek/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M-Tek - Priskalkulator</title>
-    <meta name="description" content="Få et raskt prisestimat fra M-Tek på tekniske utbedringer av varmekabler.">
+    <title>M-Tek - Utslippskalkulator</title>
+    <meta name="description" content="Få et raskt utslippsestimat fra M-Tek for utbedring av varmekabler.">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,9 +19,8 @@
             <div style="margin-bottom: 2rem;">
                 <img src="m-tek-logo-darker.svg" alt="M-Tek Logo" style="height: 50px;">
             </div>
-            <h1 class="main-title">Beregne pris og besparelse på <br>reparasjon av dine varmekabler</h1>
-            <p class="subtitle">Få et umiddelbart prisestimat på punktutbedring. Vår kalkulator analyserer kostnadene
-                ved å reparere fremfor å bytte hele gulvet.</p>
+            <h1 class="main-title">Beregn utslipp og besparelse ved <br>reparasjon av varmekabler</h1>
+            <p class="subtitle">Få et umiddelbart utslippsestimat basert på Resultat - M-tek. Kalkulatoren sammenligner M-Tek-utbedring mot totalrenovering.</p>
         </header>
 
         <!-- Main Dashboard Card -->
@@ -37,7 +36,7 @@
                             <line x1="12" y1="16" x2="12" y2="12"></line>
                             <line x1="12" y1="8" x2="12.01" y2="8"></line>
                         </svg>
-                        Sjekk pris og hvor mye du kan spare på å reparere uten å rive gulvet.
+                        Sjekk estimert utslipp og hvor mye du kan redusere ved å reparere uten å rive gulvet.
                     </h3>
                     <p class="panel-sub">Konfigurer gulvareal for å starte den tekniske beregningen.</p>
                 </div>
@@ -121,7 +120,7 @@
             <div id="leadFormSection" class="lead-overlay hidden">
                 <div class="panel-header" style="text-align: center;">
                     <h3>Hvor skal vi sende analysen?</h3>
-                    <p class="panel-sub">Fyll ut detaljene for å låse opp prisestimatet</p>
+                    <p class="panel-sub">Fyll ut detaljene for å låse opp utslippsestimatet</p>
                 </div>
 
                 <form id="leadForm" class="lead-form">
@@ -156,16 +155,16 @@
 
                 <div class="metrikk-grid">
                     <div class="metrikk-card">
-                        <div class="metrikk-label">Estimert Kostnad</div>
-                        <div class="metrikk-value"><span id="costValue">0</span> <span class="metrikk-unit">,-</span>
+                        <div class="metrikk-label">Estimert utslipp</div>
+                        <div class="metrikk-value"><span id="costValue">0</span> <span class="metrikk-unit">kgCO2e</span>
                         </div>
                     </div>
                     <div class="metrikk-card">
-                        <div class="metrikk-label">Nedetid</div>
+                        <div class="metrikk-label">Unngåtte utslipp</div>
                         <div class="metrikk-value"><span id="timeValue">0</span></div>
                     </div>
                     <div class="metrikk-card">
-                        <div class="metrikk-label">Materialbesparelse</div>
+                        <div class="metrikk-label">Reduksjon vs totalrenovering</div>
                         <div class="metrikk-value"><span id="materialSavings">95</span><span
                                 class="metrikk-unit">%</span></div>
                     </div>
