--- a/Kalkulator M-tek/module.html
+++ b/Kalkulator M-tek/module.html
@@ -12,7 +12,7 @@
                         <line x1="12" y1="16" x2="12" y2="12"></line>
                         <line x1="12" y1="8" x2="12.01" y2="8"></line>
                     </svg>
-                    Sjekk estimert utslipp og hvor mye du kan redusere ved å reparere uten å rive gulvet.
+                    Sjekk estimert utslipp og hvor stor besparelse du kan oppnå uten å rive gulvet.
                 </h3>
                 <p class="panel-sub">Konfigurer gulvareal for å starte den tekniske beregningen.</p>
             </div>
@@ -82,7 +82,7 @@
         <div id="leadFormSection" class="lead-overlay hidden">
             <div class="panel-header" style="text-align: center;">
                 <h3>Lås opp din analyse</h3>
-                <p class="panel-sub">Fyll ut detaljene for å se estimert utslipp og reduksjon.</p>
+                <p class="panel-sub">Fyll ut detaljene for å se estimert utslipp og besparelse.</p>
             </div>
 
             <form id="leadForm" class="lead-form">
@@ -109,15 +109,15 @@
 
             <div class="metrikk-grid">
                 <div class="metrikk-card">
-                    <div class="metrikk-label">Estimert utslipp</div>
+                    <div class="metrikk-label">Estimert utslipp (M-Tek)</div>
                     <div class="metrikk-value"><span id="costValue">0</span> <span class="metrikk-unit">kgCO2e</span></div>
                 </div>
                 <div class="metrikk-card">
-                    <div class="metrikk-label">Unngåtte utslipp</div>
+                    <div class="metrikk-label">Estimert besparelse</div>
                     <div class="metrikk-value"><span id="timeValue">0</span></div>
                 </div>
                 <div class="metrikk-card">
-                    <div class="metrikk-label">Reduksjon vs totalrenovering</div>
+                    <div class="metrikk-label">Besparelse i prosent</div>
                     <div class="metrikk-value"><span id="materialSavings">95</span><span class="metrikk-unit">%</span>
                     </div>
                 </div>
