Update M-tek savings labels

--- a/Kalkulator M-tek/module.html
+++ b/Kalkulator M-tek/module.html
@@ -113,11 +113,11 @@
                     <div class="metrikk-value"><span id="costValue">0</span> <span class="metrikk-unit">kgCO2e</span></div>
                 </div>
                 <div class="metrikk-card">
-                    <div class="metrikk-label">Estimert besparelse</div>
+                    <div class="metrikk-label">Estimert besparelse (NOK)</div>
                     <div class="metrikk-value"><span id="timeValue">0</span></div>
                 </div>
                 <div class="metrikk-card">
-                    <div class="metrikk-label">Besparelse i prosent</div>
+                    <div class="metrikk-label">Besparelse i prosent (NOK)</div>
                     <div class="metrikk-value"><span id="materialSavings">95</span><span class="metrikk-unit">%</span>
                     </div>
                 </div>
