--- a/Kalkulator M-tek/index.html
+++ b/Kalkulator M-tek/index.html
@@ -160,11 +160,11 @@
                         </div>
                     </div>
                     <div class="metrikk-card">
-                        <div class="metrikk-label">Estimert besparelse</div>
+                        <div class="metrikk-label">Estimert besparelse (NOK)</div>
                         <div class="metrikk-value"><span id="timeValue">0</span></div>
                     </div>
                     <div class="metrikk-card">
-                        <div class="metrikk-label">Besparelse i prosent</div>
+                        <div class="metrikk-label">Besparelse i prosent (NOK)</div>
                         <div class="metrikk-value"><span id="materialSavings">95</span><span
                                 class="metrikk-unit">%</span></div>
                     </div>
