Clarify Kalkulator M-tek copy

--- a/Kalkulator M-tek/module.html
+++ b/Kalkulator M-tek/module.html
@@ -82,7 +82,7 @@
         <div id="leadFormSection" class="lead-overlay hidden">
             <div class="panel-header" style="text-align: center;">
                 <h3>Lås opp din analyse</h3>
-                <p class="panel-sub">Fyll ut detaljene for å se estimert utslipp og besparelse.</p>
+                <p class="panel-sub">Fyll ut detaljene for å se estimert utslipp.</p>
             </div>
 
             <form id="leadForm" class="lead-form">
@@ -113,11 +113,11 @@
                     <div class="metrikk-value"><span id="costValue">0</span> <span class="metrikk-unit">kgCO2e</span></div>
                 </div>
                 <div class="metrikk-card">
-                    <div class="metrikk-label">Estimert besparelse (NOK)</div>
+                    <div class="metrikk-label">Unngåtte utslipp</div>
                     <div class="metrikk-value"><span id="timeValue">0</span></div>
                 </div>
                 <div class="metrikk-card">
-                    <div class="metrikk-label">Besparelse i prosent (NOK)</div>
+                    <div class="metrikk-label">Utslippsreduksjon i prosent</div>
                     <div class="metrikk-value"><span id="materialSavings">95</span><span class="metrikk-unit">%</span>
                     </div>
                 </div>
