--- a/Kalkulator M-tek/index.html
+++ b/Kalkulator M-tek/index.html
@@ -20,7 +20,7 @@
                 <img src="m-tek-logo-darker.svg" alt="M-Tek Logo" style="height: 50px;">
             </div>
             <h1 class="main-title">Beregn utslipp og estimert besparelse <br>ved reparasjon av varmekabler</h1>
-            <p class="subtitle">Få et estimat på både utslipp og besparelse basert på Resultat - M-tek. Kalkulatoren sammenligner M-Tek-utbedring mot totalrenovering.</p>
+            <p class="subtitle">Få et utslippsestimat basert på Resultat - M-tek. Prisgrunnlag legges til når separat prisark er klart.</p>
         </header>
 
         <!-- Main Dashboard Card -->
@@ -120,7 +120,7 @@
             <div id="leadFormSection" class="lead-overlay hidden">
                 <div class="panel-header" style="text-align: center;">
                     <h3>Hvor skal vi sende analysen?</h3>
-                    <p class="panel-sub">Fyll ut detaljene for å låse opp estimatet for utslipp og besparelse</p>
+                    <p class="panel-sub">Fyll ut detaljene for å låse opp utslippsestimatet</p>
                 </div>
 
                 <form id="leadForm" class="lead-form">
@@ -160,11 +160,11 @@
                         </div>
                     </div>
                     <div class="metrikk-card">
-                        <div class="metrikk-label">Estimert besparelse (NOK)</div>
+                        <div class="metrikk-label">Unngåtte utslipp</div>
                         <div class="metrikk-value"><span id="timeValue">0</span></div>
                     </div>
                     <div class="metrikk-card">
-                        <div class="metrikk-label">Besparelse i prosent (NOK)</div>
+                        <div class="metrikk-label">Utslippsreduksjon i prosent</div>
                         <div class="metrikk-value"><span id="materialSavings">95</span><span
                                 class="metrikk-unit">%</span></div>
                     </div>
